fixes collapsable navbar top section bug

--- a/style.css
+++ b/style.css
@@ -1044,10 +1044,6 @@ body {
     #menu_download {
         width: 16rem;
     }
-
-    #menu_nav {
-        padding-right: 3rem;
-    }
 }
 
 #footer_content {
